  been removed.
* [nt]roff: The static limit on the number of nested diversions has been
  removed.
* [nt]roff: A maximum of 2000 characters (bytes) is now allowed as the
  total of all arguments to a macro.
* dpost: The inclusion of PostScript pictures has been fixed; it could
  generate invalid PostScript programs since release 051025 under certain
  circumstances.
* dpost: PostScript pictures that contain binary data can be included now.
* pic: Troff commands that begin with a "'" are now passed through.
* grap: Negative zeros in coordinate tick labels are now avoided.
* -man macros: Fixed the output of a very long line following ".TP".
* -mdoc macros: Changed the names of Courier fonts to \f(CW \f(CI to
  match those of troff.
* RPM package builds now require the new "Heirloom Development Tools"
  package from <http://heirloom.sourceforge.net/devtools.html> to be
  installed.

Release 051107
* The "checknr" utility has been added from OpenSolaris source code.
* The "ptx" utility has been added from Unix 7th Edition source code.
* When a locale-dependent or font-specific character was used directly
  after a macro that ended with a font switch, it was chosen from the
  old font. This has been fixed.
* The ".hidechar" request now works correctly if the selected font is
  not the current font.
* eqn: More narrow spaces are inserted at some roman/italic font changes
  now to better match the appearance of the current fonts.
* grap: The file "grap.defines" has been moved to $(LIBDIR).

Release 051031
* The "-mpm" macros and the "pm" program have been added from Plan 9 source
  code. They form a "-ms"-like package for vertical justification; the file
  "mpm/README" explains some details.
* eqn: The generated troff program is now resolution-independent; the "-r"
  option is no longer needed and is ignored.
* dpost: The elements of overbars, brackets, and braces align better now, in
  particular in respect to documents distilled by Ghostscript.