@@ -8,7 +8,7 @@
 .\"
 .\" Distributed under the terms of the Lucent Public License Version 1.02.
 .\"
-.\" Sccsid @(#)color	1.2 (gritter) 9/21/05
+.\" Sccsid @(#)color	1.3 (gritter) 11/28/05
 .ds Dc black
 .ds Cc \*(Dc
 .de CL	\" Color selection macro
@@ -17,6 +17,8 @@
 .	\"	$1=textcolor on backgroundcolor (e.g. .CL "red on blue")
 .	\"	$1=red green blue rgb (e.g. .CL ".2 .3 .4 rgb") or
 .	\"	$1=hue saturation brightness hsb (e.g. .CL ".5 .6 .7 hsb")
+.	\"	$1=cyan magenta yellow black cmyk (e.g. .CL ".1 .2 .3 .4 cmyk")
+.	\"	$1=arbitrary PostScript commands
 .	\"	$2=text
 .	\"
 .	\" If no arguments are given the default color (usually black) will be
@@ -37,9 +39,9 @@
 .	\" of default colors - black or white on black for reverse video mode.
 .	\"
 .	\" All colors may not be supported on every output device, and the direct
-.	\" specification of a color via an explicit rgb or hsb argument may also
+.	\" specification of a color via an explicit rgb, hsb, or cmyk argument may also
 .	\" be device dependent. In any case, to be safe on PostScript devices, all
-.	\" numeric paramenters in the direct rgb or hsb specifications should lie
+.	\" numeric paramenters in the direct rgb, hsb or cmyk specifications should lie
 .	\" between 0 and 1 (inclusive). The names of the currently available colors
 .	\" on PostScript printers are listed in file /usr/lib/postscript/color.ps.
 .	\"
